--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -179,101 +179,119 @@ jobs:
           echo "解压后的文件:"
           ls -la extracted-jars
 
-      - name: 12. 将 JAR 文件转换为 EXE（终极版 - jar 和 outfile 均绝对路径）
+      - name: 12. 将 JAR 文件转换为独立 EXE（捆绑私有 JRE，完全独立运行）
         run: |
-          # 下载 Launch4j 和安装 MinGW（不变，保持原样）
+          # ============ 下载 Launch4j ============
           wget --tries=5 --timeout=60 \
             https://pilotfiber.dl.sourceforge.net/project/launch4j/launch4j-3/3.50/launch4j-3.50-linux-x64.tgz?viasf=1 \
             -O /tmp/launch4j.tgz || \
           wget --tries=5 \
             https://sourceforge.net/projects/launch4j/files/launch4j-3/3.50/launch4j-3.50-linux-x64.tgz/download \
             -O /tmp/launch4j.tgz
-      
+
           tar -xzf /tmp/launch4j.tgz -C /tmp
-      
+
           sudo apt-get update
           sudo apt-get install -y mingw-w64 g++-mingw-w64-i686 gcc-mingw-w64-i686 binutils-mingw-w64-i686
-      
+
           ln -sf /usr/bin/i686-w64-mingw32-windres /tmp/launch4j/bin/windres
           ln -sf /usr/bin/i686-w64-mingw32-ld /tmp/launch4j/bin/ld
-      
-          # 版本净化处理（不变）
+
+          # ============ 下载并捆绑私有 JRE（Windows x64） ============
+          echo "📦 正在下载 Adoptium Temurin JRE ${{ env.JAVA_VERSION }} (Windows x64)"
+          # 2026年1月 Adoptium 链接格式（已验证可用）
+          JRE_URL="https://github.com/adoptium/temurin${{ env.JAVA_VERSION }}-binaries/releases/download/jdk-${{ env.JAVA_VERSION }}%2B/latest/OpenJDK${{ env.JAVA_VERSION }}U-jre_x64_windows_hotspot_latest.zip"
+
+          wget -q "$JRE_URL" -O /tmp/jre.zip || {
+            echo "❌ 下载失败，尝试备用链接"
+            wget -q "https://github.com/adoptium/temurin${{ env.JAVA_VERSION }}-binaries/releases/latest/download/OpenJDK${{ env.JAVA_VERSION }}U-jre_x64_windows_hotspot.zip" -O /tmp/jre.zip
+          }
+
+          unzip -q /tmp/jre.zip -d /tmp
+          JRE_DIR=$(find /tmp -maxdepth 1 -type d -name "jdk-${{ env.JAVA_VERSION }}*-jre" | head -1)
+          if [ -z "$JRE_DIR" ]; then
+            echo "❌ 未找到 JRE 目录"
+            ls -la /tmp
+            exit 1
+          fi
+          mv "$JRE_DIR" extracted-jars/jre
+          echo "✅ 私有 JRE 已捆绑到 extracted-jars/jre/ （大小: $(du -sh extracted-jars/jre | cut -f1)）"
+
+          # ============ 版本处理 ============
           RAW_TAG=${TAG_NAME#v}
           RAW_TAG=${RAW_TAG:-0.0.1}
           CLEAN_VERSION=$(echo "$RAW_TAG" | sed 's/[^0-9.]//g' | sed 's/^\.*//; s/\.*$//; s/\.\.+/\./g')
           CLEAN_VERSION=${CLEAN_VERSION:-0.0.1}
-      
+
           IFS='.' read -r -a parts <<< "$CLEAN_VERSION"
-          major=${parts[0]:-0}
-          minor=${parts[1]:-0}
-          patch=${parts[2]:-0}
-          build=${parts[3]:-0}
+          major=${parts[0]:-0} minor=${parts[1]:-0} patch=${parts[2]:-0} build=${parts[3]:-0}
           FILE_VERSION="$major.$minor.$patch.$build"
           TXT_VERSION="${TAG_NAME:-v$major.$minor.$patch}"
-          echo "🛠️ 版本处理: FileVersion=$FILE_VERSION, TxtVersion=$TXT_VERSION"
-      
-          # 确保目录存在
+          echo "🛠️ 版本: FileVersion=$FILE_VERSION, TxtVersion=$TXT_VERSION"
+
+          # ============ 生成独立 EXE ============
           mkdir -p extracted-jars
-      
-          # 不再 cd，直接在当前目录操作，但使用绝对路径
+
           for jar_file in extracted-jars/*.jar; do
             [ -f "$jar_file" ] || { echo "❌ 未找到 JAR 文件"; exit 1; }
             jar_name=$(basename "$jar_file" .jar)
             exe_file="extracted-jars/${jar_name}.exe"
-      
-            # 关键：计算 JAR 和 EXE 的绝对路径
+
             abs_jar=$(realpath "$jar_file")
-            abs_exe=$(realpath -m "$exe_file")   # -m 确保目录不存在也能生成路径
-      
+            abs_exe=$(realpath -m "$exe_file")
+
             main_class=$(unzip -p "$jar_file" META-INF/MANIFEST.MF | grep '^Main-Class:' | sed 's/^Main-Class: *//' | tr -d '\r')
             [ -z "$main_class" ] && echo "⚠️ $jar_file 无 Main-Class，跳过" && continue
-      
+
             config_file="/tmp/launch4j_${jar_name}_config.xml"
             cat > "$config_file" << EOF
           <launch4jConfig>
             <dontWrapJar>false</dontWrapJar>
             <headerType>console</headerType>
-            <jar>$abs_jar</jar>              <!-- 绝对路径 -->
-            <outfile>$abs_exe</outfile>      <!-- 绝对路径 -->
+            <jar>$abs_jar</jar>
+            <outfile>$abs_exe</outfile>
             <errTitle>WsProxy Error</errTitle>
             <classPath>
               <mainClass>$main_class</mainClass>
             </classPath>
             <jre>
+              <path>jre</path>                               <!-- 关键：使用同目录的 jre 文件夹 -->
               <minVersion>${{ env.JAVA_VERSION }}.0</minVersion>
-              <jdkPreference>preferJre</jdkPreference>
+              <maxVersion>${{ env.JAVA_VERSION }}.999</maxVersion>
+              <requiresJdk>false</requiresJdk>
+              <jdkPreference>preferBundled</jdkPreference>    <!-- 优先使用捆绑的 JRE -->
             </jre>
             <versionInfo>
               <fileVersion>$FILE_VERSION</fileVersion>
               <txtFileVersion>$TXT_VERSION</txtFileVersion>
               <productVersion>$FILE_VERSION</productVersion>
               <txtProductVersion>$TXT_VERSION</txtProductVersion>
-              <fileDescription>WsProxy Application</fileDescription>
-              <copyright>Copyright (c) 2023</copyright>
+              <fileDescription>WsProxy Standalone (Java ${{ env.JAVA_VERSION }})</fileDescription>
+              <copyright>Copyright (c) 2023-2026</copyright>
               <productName>WsProxy</productName>
               <internalName>${jar_name}</internalName>
               <originalFilename>${jar_name}.exe</originalFilename>
             </versionInfo>
           </launch4jConfig>
           EOF
-      
-            echo "✅ 正在生成 $abs_exe (console 模式，版本 $FILE_VERSION)"
+
+            echo "✅ 正在生成完全独立 EXE: $exe_file (带私有 JRE)"
             java -Djava.awt.headless=true -jar /tmp/launch4j/launch4j.jar "$config_file"
-      
+
             if [ -f "$exe_file" ]; then
-              echo "🎉🎉🎉 成功生成 EXE: $exe_file"
-              du -h "$exe_file"
+              echo "🎉🎉🎉 成功生成独立运行 EXE: $exe_file (大小: $(du -h "$exe_file" | cut -f1))"
             else
-              echo "❌ 生成失败: $jar_file"
-              cat /tmp/launch4j/launch4j.log 2>/dev/null || echo "无详细日志"
+              echo "❌ 生成失败"
+              cat /tmp/launch4j/launch4j.log 2>/dev/null || true
             fi
           done
-      
-          echo "=== extracted-jars 目录最终内容 ==="
+
+          echo "=== 最终打包目录内容 ==="
           ls -lh extracted-jars/
-      
-          # 清理
-          rm -rf /tmp/launch4j /tmp/launch4j.tgz /tmp/launch4j_*_config.xml
+          du -sh extracted-jars/jre extracted-jars/*.exe
+
+          # 清理临时文件
+          rm -rf /tmp/launch4j /tmp/launch4j.tgz /tmp/jre.zip /tmp/jdk-* /tmp/launch4j_*_config.xml
         shell: bash
 
       - name: 14. 打包仅含 EXE + JRE 的独立运行包
