--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -333,12 +333,48 @@ jobs:
 
           # 打成 ZIP
           cd standalone-package
-          zip -r ../WsProxy-${{ env.TAG_NAME }}-win.zip ./*
+          zip -r ../WsProxy-Windows-${{ env.TAG_NAME }}.zip ./*
           cd ..
 
-          echo "✅ 独立运行包打包完成: WsProxy-${{ env.TAG_NAME }}-win.zip"
-          ls -lh WsProxy-${{ env.TAG_NAME }}-win.zip
-          du -sh WsProxy-${{ env.TAG_NAME }}-win.zip
+          echo "✅ 独立运行包打包完成: WsProxy-Windows-${{ env.TAG_NAME }}.zip"
+          ls -lh WsProxy-Windows-${{ env.TAG_NAME }}.zip
+          du -sh WsProxy-Windows-${{ env.TAG_NAME }}.zip
+          
+      - name: 14. 打包仅含 EXE + JRE + 配置文件的独立运行包
+        run: |
+          # 创建临时打包目录
+          mkdir -p standalone-package
+
+          # 复制 EXE 和 jre 文件夹
+          cp extracted-jars/*.exe standalone-package/ 2>/dev/null || echo "无 EXE"
+          cp -r extracted-jars/jre standalone-package/ 2>/dev/null || echo "无 jre"
+
+          # 关键：复制 application-prod.yml 到打包目录（与 EXE 同级）
+          if [ -f src/main/resources/application-prod.yml ]; then
+            cp src/main/resources/application-prod.yml standalone-package/
+            echo "✅ 已包含 application-prod.yml 配置文件"
+          else
+            echo "⚠️ 未找到 src/main/resources/application-prod.yml，使用默认模板创建"
+            cat > standalone-package/application-prod.yml << 'EOF'
+          server:
+            port: 8081
+            servlet:
+              context-path: /ws-proxy
+          
+          ws:
+            url: ws://localhost:8081/ws # 可忽略，程序内部自动计算
+            access-token-name: access-token
+          EOF
+          fi
+          
+          # 打成 ZIP
+          cd standalone-package
+          zip -r ../WsProxy-Windows-${{ env.TAG_NAME }}.zip ./*
+          cd ..
+          
+          echo "✅ 独立运行包打包完成（包含 EXE + jre + application-prod.yml）"
+          ls -lh WsProxy-Windows-${{ env.TAG_NAME }}.zip
+          du -sh WsProxy-Windows-${{ env.TAG_NAME }}.zip     
 
       - name: 15. 上传到 GitHub Release（包含独立 EXE 包）
         uses: softprops/action-gh-release@v2
@@ -350,7 +386,7 @@ jobs:
             jars-${{ env.TAG_NAME }}.zip
             extracted-jars/*.jar
             extracted-jars/*.exe
-            WsProxy-${{ env.TAG_NAME }}-win.zip        # 新增：独立运行包
+            WsProxy-Windows-${{ env.TAG_NAME }}.zip        # 新增：独立运行包
           body: |
             **Release 信息**
             - 标签: ${{ env.TAG_NAME }}
@@ -358,7 +394,7 @@ jobs:
             **WsProxy ${{ env.TAG_NAME }} 发布**
 
             ### 🏆 推荐下载（完全独立运行，无需安装 Java）
-            - **WsProxy-${{ env.TAG_NAME }}-win.zip**  
+            - **WsProxy-Windows-${{ env.TAG_NAME }}.zip**  
               → 解压后直接双击 `.exe` 文件运行（已内置 Java 运行时）
 
             ### 📦 其他文件
@@ -385,8 +421,8 @@ jobs:
       - name: 上传独立 EXE 包作为 Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: WsProxy-Standalone-EXE
-          path: WsProxy-${{ env.TAG_NAME }}-win.zip
+          name: WsProxy-Windows-Standalone
+          path: WsProxy-Windows-${{ env.TAG_NAME }}.zip
 
   build-and-push:
     if: ${{ github.event_name == 'push' || inputs.push_to_registry == true }}
