chore(config): 简化应用名称配置
- 将应用名称从 ws-proxy-service 修改为 ws-proxy
- 移除可选配置文件导入设置

--- a/ws-service/src/main/resources/application.yml
+++ b/ws-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   application:
-    name: ws-proxy-service
+    name: ws-proxy
   config:
     import:
       - optional:file:./application-prod.yml
