chore(build): 更新构建工作流配置
- 移除了 WsProxy-Windows 独立运行包的注释标记
- 保持了 Windows 平台独立运行包的构建输出配置
- 维持了 release 信息的标签显示功能

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -370,7 +370,7 @@ jobs:
             jars-${{ env.TAG_NAME }}.zip
             extracted-jars/*.jar
             extracted-jars/*.exe
-            WsProxy-Windows-${{ env.TAG_NAME }}.zip        # 新增：独立运行包
+            WsProxy-Windows-${{ env.TAG_NAME }}.zip
           body: |
             **Release 信息**
             - 标签: ${{ env.TAG_NAME }}
